# haskell-nix-setup

./: .envrc  LICENSE  Main.hs  demo.cabal  hie.yaml  shell.nix
direnv/: use_nix.sh
nix/: nixpkgs.nix  shell.nix  sources.nix
nix/haskell/: default.nix  overlay.nix
src/: Module.hs  OtherModule.hs
